# orffinder

./: .gitignore  README.md  orffinder.py  pyproject.toml  setup.cfg
src/orffinder/: __init__.py  __main__.py  gffoutput.py  orffinder.py
