[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "orffinder"
version = "0.0.1"
authors = [
	{ name = "Richard Wheeler", email="richardwheeler@outlook.com" },
]
description = "Python module for simple identification of open reading frames in DNA sequences."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
]

[project.urls]
"Homepage" = "https://github.com/zephyris/orffinder"
