[project]
name = "orffinder"
version = "0.0.1"
authors = [
	{ name = "Richard Wheeler", email="richardwheeler@outlook.com" },
]
description = "Python module for simple identification of open reading frames in DNA sequences."
readme = "README.md"
dependencies = [
	"geffa @ git+https://github.com/ulido/geffa"
]
requires-python = ">= 3.10"

[project.scripts]
orffinder = "orffinder.__main__:main"

[build-system]
requires = ["flit_core>=3.4"]
build-backend = "flit_core.buildapi"

[project.urls]
"Homepage" = "https://github.com/zephyris/orffinder"